--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-grid-community": "^34.0.2",
+    "ag-grid-react": "^34.0.2",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "classnames": "^2.5.1",
